--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>hello</title>
         <body>
             <p>This is my code</p>
+            <P>This is first code</P>
         </body>
     </head>
 </html>
